[package]
name = "filepath"
version = "0.1.3"
authors = ["Tom Schuster <evilpies@gmail.com>"]
categories = ["filesystem"]
keywords = ["path", "file"]
license = "Apache-2.0/MIT"
readme = "./README.md"
repository = "https://github.com/evilpie/filepath"
description = "Get the filesystem path of a file."

[target.'cfg(target_os="macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os="ios")'.dependencies]
libc = {version = "0.2", default_features = false}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["std", "fileapi"] }