[package]
name = "filepath"
version = "0.1.3"
authors = ["Tom Schuster <evilpies@gmail.com>"]
categories = ["filesystem"]
keywords = ["path", "file"]
license = "Apache-2.0/MIT"
readme = "./README.md"
repository = "https://github.com/evilpie/filepath"
description = "Get the filesystem path of a file."
edition = "2021"

[target.'cfg(target_os="macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os="ios")'.dependencies]
libc = {version = "0.2", default-features = false}

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32_Storage_FileSystem"] }